--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "antd": "^4.23.6",
     "axios": "^1.2.0",
     "dotenv": "^16.0.3",
+    "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
