--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.23.6",
+    "antd-table-saveas-excel": "^2.2.1",
     "axios": "^1.2.0",
     "dotenv": "^16.0.3",
     "js-cookie": "^3.0.5",
@@ -17,6 +18,7 @@
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
+    "react-html-table-to-excel": "^2.0.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
